--- a/src/main/webapp/public/usuario.xhtml
+++ b/src/main/webapp/public/usuario.xhtml
@@ -114,7 +114,7 @@
 						<div class="form-group">
 							<p:outputLabel for="senha" value="#{messages['user.password']}" />
 							<p:password id="senha" styleClass="form-control"
-								value="#{gerenciarUsuarioMB.usuario.senha}" required="true">
+								value="#{gerenciarUsuarioMB.usuario.senha}" required="false">
 							</p:password>
 							<!-- <p:message for="senha" errorClass="invalid" /> -->
 						</div>
